@@ -26,7 +26,6 @@ BuildRequires:  perl(Encode::Locale)
 BuildRequires:  perl(File::Basename)
 BuildRequires:  perl(File::Copy)
 BuildRequires:  perl(File::Find)
-BuildRequires:  perl(File::HomeDir)
 BuildRequires:  perl(File::Path)
 BuildRequires:  perl(File::Spec)
 BuildRequires:  perl(File::Temp)
@@ -97,7 +96,6 @@ Requires:       perl(Encode)
 Requires:       perl(Encode::Locale)
 Requires:       perl(File::Basename)
 Requires:       perl(File::Copy)
-Requires:       perl(File::HomeDir)
 Requires:       perl(File::Path)
 Requires:       perl(File::Temp)
 Requires:       perl(Getopt::Long)
